# hs-code-llm

./: .env.example  .gitignore  Makefile  README.md  project_details.md  pyproject.toml
data/: README.md
data/2026-06-24/: README.md  stats.json
src/hs_code_llm/: data.py  predict.py  reward.py  scan.py  sft_phase0.py
tests/: test_reward.py
