[project]
name = "hs-code-llm"
version = "0.1.0"
description = "RL-fine-tuned LLM for predicting HTSUS HS codes from product descriptions (Phase 0 → Phase A → Phase B per project_details.md)."
requires-python = ">=3.12"
dependencies = [
  # Phase 0 + Phase B prototype training runs on Apple Silicon via
  # mlx-tune (Unsloth-compatible API on MLX). When we promote to a
  # CUDA box for the real Phase A SFT + GRPO, the SAME training script
  # works under `from unsloth import FastLanguageModel` — code stays
  # portable. See project_details.md §5.
  "mlx-tune>=0.6",
  "datasets>=3.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hs_code_llm"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
